--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: #66fcf1; 
 }
 .navbar .max-width{
     display: flex;
@@ -101,7 +101,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color: #45A29E;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -137,7 +137,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: #45A29E;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -193,29 +193,30 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color:#45A29E ;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: #45A29E;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #45A29E;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
+    color: #45A29E;
     background: none;
 }
 
 /* about section styling */
 .about .title::after{
     content: "who i am";
+    color: #45A29E;
 }
 .about .about-content .left{
     width: 45%;
@@ -235,25 +236,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color: #45A29E; 
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: #45A29E;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #45A29E;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color: #45A29E;
     background: none;
 }
 
@@ -385,6 +386,7 @@ section .title::after{
 /* contact section styling */
 .contact .title::after{
     content: "get in touch";
+    color: #45A29E;
 }
 .contact .contact-content .column{
     width: calc(50% - 30px);
@@ -410,7 +412,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: #45A29E;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -469,12 +471,12 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: crimson;
-  border: 2px solid crimson;
+  background: #45A29E;
+  border: 2px solid #45A29E;
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: crimson;
+  color: #45A29E;
   background: none;
 }
 /* footer section styling */
@@ -485,7 +487,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: crimson;
+    color: #45A29E;
     text-decoration: none;
 }
 footer span a:hover{
